# Roman-s-Law-office

./: .dockerignore  Dockerfile  README.md  pyproject.toml  report.md  requirements.txt
db/: billing.json  calendar.json  client.json  pushover_reminders.json  to_be_paid_billing.json
knowledge/: user_preference.txt
output/: app.py  law_automation.py_design.md
src/: app.py  azlaw_scraper.py  billing_payment.py  chatbot_law_check.py  config.py  homepage_calendar.py  law_automation.py  legal_searcher.py  pdf_client_intel.py  pushover_reminder_service.py  sendgrid.py  serper_search.py  styles.css  summarize_rulings.py  test_law_automation.py
src/law_automation/: crew.py  main.py
src/law_automation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/law_automation/config/: agents.yaml
