[project]
name = "law_automation"
version = "0.1.0"
description = "law_automation using crewAI"
authors = [{ name = "Jada Yang", email = "jiadaouyang@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3",
    "streamlit",
]

[project.scripts]
# Flat layout: runnable code lives in src/main.py as top-level module `main`.
law_automation = "main:run"
run_crew = "main:run"
train = "main:run"
replay = "main:run"
test = "main:run"
run_with_trigger = "main:run"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools]
py-modules = [
    "agent",
    "app",
    "azlaw_scraper",
    "billing_payment",
    "chatbot_law_check",
    "config",
    "homepage_calendar",
    "law_automation",
    "legal_searcher",
    "main",
    "pushover_reminder_service",
    "sendgrid",
    "serper_search",
    "summarize_rulings",
    "test_law_automation",
]

[tool.crewai]
type = "crew"
